// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parentCandidates 1`] = `
<div>
  <IndexPatternSelect
    controlIndex={0}
    getIndexPatterns={[Function]}
    onChange={[Function]}
    value="indexPattern1"
  />
  <FieldSelect
    controlIndex={0}
    filterField={[Function]}
    getIndexPattern={[Function]}
    indexPatternId="indexPattern1"
    onChange={[Function]}
    value="keywordField"
  />
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText="Options are based on the value of parent control. Disabled if parent is not set."
    id="parentSelect-0"
    label="Parent control"
  >
    <EuiSelect
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "",
            "value": "",
          },
          Object {
            "text": "fieldA",
            "value": "1",
          },
          Object {
            "text": "fieldB",
            "value": "2",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="multiselect-0"
  >
    <EuiSwitch
      checked={true}
      data-test-subj="listControlMultiselectInput"
      label="Multiselect"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="size-0"
    label="Size"
  >
    <EuiFieldNumber
      data-test-subj="listControlSizeInput"
      fullWidth={false}
      isLoading={false}
      min={1}
      onChange={[Function]}
      value={10}
    />
  </EuiFormRow>
</div>
`;

exports[`renders ListControlEditor 1`] = `
<div>
  <IndexPatternSelect
    controlIndex={0}
    getIndexPatterns={[Function]}
    onChange={[Function]}
    value="indexPattern1"
  />
  <FieldSelect
    controlIndex={0}
    filterField={[Function]}
    getIndexPattern={[Function]}
    indexPatternId="indexPattern1"
    onChange={[Function]}
    value="keywordField"
  />
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="multiselect-0"
  >
    <EuiSwitch
      checked={true}
      data-test-subj="listControlMultiselectInput"
      label="Multiselect"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="size-0"
    label="Size"
  >
    <EuiFieldNumber
      data-test-subj="listControlSizeInput"
      fullWidth={false}
      isLoading={false}
      min={1}
      onChange={[Function]}
      value={10}
    />
  </EuiFormRow>
</div>
`;
